# win_vulkan_opengl_interop_demo

./: .gitignore  CMakeLists.txt  README.md  main.cc  shader_s.h  vulkan_command_buffer.cc  vulkan_command_buffer.h  vulkan_compute_pipeline.cc  vulkan_compute_pipeline.h  vulkan_context.cc  vulkan_context.h  vulkan_pfn.cc  vulkan_pfn.h  vulkan_pipeline.cc  vulkan_pipeline.h  vulkan_resources.h  vulkan_sampler.cc  vulkan_sampler.h  vulkan_semaphore.cc  vulkan_semaphore.h  vulkan_shader.cc  vulkan_shader.h  vulkan_texture.cc  vulkan_texture.h
Vulkan-headers/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
glfw3.3.8/lib/: glfw3.lib
glfw3.3.8/lib/pkgconfig/: glfw3.pc
shaders/: gl_shader_sources.h  vk_kernel_sources.h
